# dynamic-pypi

./: .gitignore  README.md  pyproject.toml
dpypi/: serve.py  web_utils.py
dpypi/connections/: connection.py  github_connection.py  local_connection.py
example/: config.toml
templates/: distribution.html
tests/: test_serve.py  test_serve_download_create.py
