[tool.poetry]
name = "dynamic-pypi"
version = "0.6.5.1"
description = ""
authors = ["parnell <3028114+parnell@users.noreply.github.com>"]
readme = "README.md"

packages = [{ include = "dpypi" }]

[tool.poetry.dependencies]
python = "^3.10"
pi-conf = ">=0.7.7.5"
pygithub = "^2.2.0"
pydantic = "^2.8.2"

[tool.poetry.scripts]
dpypi_serve = "dpypi.serve:main"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240712"
pytest = "^8.3.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
